TP-555: just to make sure the more on takepart module doesn't wrap

--- a/drupal/sites/all/themes/fresh/sass/modules/_tp_more_on_takepart.scss
+++ b/drupal/sites/all/themes/fresh/sass/modules/_tp_more_on_takepart.scss
@@ -1,6 +1,7 @@
 #more-on-takepart {
   max-width: 640px;
   margin: 0 auto;
+  clear: both;
   .item{
     margin-bottom: 10px;
   }
